static/css/common.css
@import "./colors.css";

* { box-sizing: border-box; }

body {
    margin: 0;
    font-family: 'Avenir Next', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 95%;
    line-height: 1.4;
    background-color: var(--color-base-10);
    color: var(--color-base-100);
    overflow-y: scroll;
}

a, a:link, a:visited {
    color: var(--pink);
    text-decoration: none;
}

a:hover {
    color: var(--magenta);
    -webkit-transition: 200ms color ease-in-out;
    -moz-transition: 200ms color ease-in-out;
    -o-transition: 200ms color ease-in-out;
    transition: 200ms color ease-in-out;
}

h1, h2, h3, h4, h5, h6, .titlefont {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-weight: normal;
    margin: 0;
}

pre, code {
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    word-break: break-word;
    color: var(--aqua);
}

pre code {
    display: block;
    overflow-x: auto;
    background-color: var(--color-base-00);
    border-radius: 6px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    padding: 1em;
}

ol { margin: 0; }
li { line-height: 1.6; }

.svg-icon {
    width: 1.2em;
    height: 1.2em;
    vertical-align: -0.250em;
    fill: var(--pink);
}

.purpletext { color: var(--purple); }
.bluetext { color: var(--blue); }
.pinktext { color: var(--pink); }
.italics { font-style: italic; }
.left-align { text-align: left; }
.right-align { text-align: right; }
.center-align { text-align: center; }

.monotext {
    font-family:'Courier New', Courier, monospace;
    font-weight: bold;
}

.container-main {
    display: flex;
    flex-direction: column;
    max-width: 1400px;
    margin: 20px auto;
    padding: 20px;
}

.container {
    display: flex;
    flex-direction: column;
    max-width: 1400px;
    margin: 5px auto;
    padding: 0px 20px;
}

.container-content {
    display: flex;
}

.list-column {
    margin-block-start: 1em;
    margin-block-end: 1em;
}

.left-column, .right-column, .list-column {
    display: flex;
    flex-direction: column;
}

.row {
    background-color: var(--color-base-00);
    margin-bottom: 20px;
    padding: 20px;
    border-radius: 6px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.row p {
    margin: 0;
}

.byte-row {
    max-height: 140px;
    height: 140px;
    overflow-y: hidden;
    display: flex;
    margin-bottom: 10px;
}

.byte-row-list {
    display: flex;
    margin-bottom: 10px;
}

.byte-row img, .byte-row-list img {
    width: 105px;
    height: 105px;
    border-radius: 6px;
    object-fit: cover;
}

.byte-row-content {
    padding-left: 15px;
}

.cga-container {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    line-height: 1.3;
}

.cga-list-content { flex: 0 1 75%; }
.cga-list-side {
    min-width: 250px;
    flex: 0 1 20%; }

.cga-list-summary {
    line-height: 1.4;
    margin-bottom: 10px;
}

.cga-header-nav {
    max-width: 1200px;
    margin: 0 auto;
    display: flex;
    justify-content: flex-end;
}

.cga-header ul li {
    line-height: 1.6em;
}

.cga-nav-link {
    padding: 10px 15px 0px 15px;
    margin: 5px;
    font-size: larger; 
    text-align: center;
    font-family:'Courier New', Courier, monospace;
    font-weight: bold;
}

.cga-footer {
    text-align: center;
    font-size: x-small;
    padding: 50px;
}

.cga-content {
    width: 100%;
    max-width: 1200px;
    line-height: 1.4;
    margin: 0 auto;
}

.cga-flex-content {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
}

.cga-flex-list {
    display: flex;
    flex-flow: row wrap;
    justify-content: flex-start;
}

.cga-flex-content a, .cga-flex-content div, .cga-flex-content img { margin: 10px; }

.cga-flex-card {
    width: 250px;
    margin: 10px 20px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
    padding: 10px;
    background: rgb(7,25,37);
    background: linear-gradient(180deg, rgba(7,25,37,1) 0%, rgba(29,76,104,1) 42%, rgba(84,134,159,1) 86%);
    box-shadow: 5px;
}

.cga-flex-card img {
    width: 250px;
    height: 250px;
}

.image-right { float: right; margin: 0px 0 10px 20px; }
.image-left { float: left; margin: 0px 20px 10px 0; }
.image-center { 
    margin: 0 auto; 
    max-width: 80%;
    display: block; }

.clear {
    clear: both;
}

.header-image {
    float: right; 
    margin: 0 0 10px 20px;
}

.cga-list-date {
    font-size: x-small;
    padding: 2px 4px;
    border-radius: 2px;
    margin-left: 6px;
    vertical-align: top;
    line-height: 1.8;
}

.cga-note-title {
    font-weight: 600;
    font-family: serif;
    line-height: 2;
}

.tag {
    background: var(--greyish);
    border-radius: 6px;
    padding: 2px 6px;
    font-size: 60%;
    vertical-align: text-top;
    line-height: 2.2;
    text-transform: uppercase;
}

